<resources>
    <string name="app_name">GofP</string>
    <string name="action_settings">Settings</string>

    <string name="first_fragment_label">Gof Patterns</string>
    <string name="plural_fragment_label">Plural</string>
    <string name="udemy_fragment_label">Udemy</string>
    <string name="pattern_fragment_label">Pattern</string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="plural">PLURAL</string>
    <string name="udemy">UDEMY</string>
    <string name="head_first">HEAD FIRST</string>
    <string name="no_pattern">NO PATTERN</string>
    <string name="pattern">PATTERN</string>
    <string name="back">BACK</string>

    <string name="see_here_the_results">See here the results</string>

    <string name="gof_design_patterns">Gof Design Patterns</string>
    <string name="format_title">%s Pattern</string>
    <string name="format_label">See results for %s Pattern</string>
    <string name="format_label_before">See results without %s Pattern</string>


    <string-array name="map_keys">
        <item name="0">patterns</item>
        <item name="1">creational</item>
        <item name="2">structural</item>
        <item name="3">behavioral</item>
    </string-array>

    <string-array name="patterns">
        <item name="creational">Creational</item>
        <item name="structural">Structural</item>
        <item name="behavioural">Behavioral</item>
    </string-array>

    <string-array name="patterns_keys">
        <item name="0">creational</item>
        <item name="1">structural</item>
        <item name="2">behavioral</item>
    </string-array>

    <string-array name="creational">
        <item name="abstract_factory">Abstract factory</item>
        <item name="builder">Builder</item>
        <item name="factory_method">Factory method</item>
        <item name="prototype">Prototype</item>
        <item name="singleton">Singleton</item>
    </string-array>

    <string-array name="creational_keys">
        <item name="0">abstract_factory</item>
        <item name="1">builder</item>
        <item name="2">factory_method</item>
        <item name="3">prototype</item>
        <item name="4">singleton</item>
    </string-array>

    <string-array name="structural">
        <item name="adapter">Adapter</item>
        <item name="bridge">Bridge</item>
        <item name="composite">Composite</item>
        <item name="decorator">Decorator</item>
        <item name="facade">Facade</item>
        <item name="flyweight">Fly Weight</item>
        <item name="proxy">Proxy</item>
    </string-array>
    <string-array name="structural_keys">
        <item name="0">adapter</item>
        <item name="1">bridge</item>
        <item name="2">composite</item>
        <item name="3">decorator</item>
        <item name="4">facade</item>
        <item name="5">fly_weight</item>
        <item name="6">proxy</item>
    </string-array>

    <string-array name="behavioral">
        <item name="chain_of_responsibility">Chain of responsibility</item>
        <item name="command">Command</item>
        <item name="interpreter">Interpreter</item>
        <item name="iterator">Iterator</item>
        <item name="mediator">Mediator</item>
        <item name="memento">Memento</item>
        <item name="observer">Observer</item>
        <item name="state">State</item>
        <item name="strategy">Strategy</item>
        <item name="template_method">Template method</item>
        <item name="visitor">Visitor</item>
    </string-array>

    <string-array name="behavioral_keys">
        <item name="0">chain_of_responsibility</item>
        <item name="1">command</item>
        <item name="2">interpreter</item>
        <item name="3">iterator</item>
        <item name="4">mediator</item>
        <item name="5">memento</item>
        <item name="6">observer</item>
        <item name="7">state</item>
        <item name="8">strategy</item>
        <item name="9">template_method</item>
        <item name="10">visitor</item>
    </string-array>

</resources>
